@@ -97,9 +97,7 @@ namespace kt
 		if (exec() == QDialog::Accepted)
 		{
 			item->start = m_from->time();
-			item->start = item->start.addSecs(-item->start.second()); // seconds must be 0
 			item->end = m_to->time(); 
-			item->end = item->end.addSecs(59 - item->end.second()); // seconds must be 59
 			item->day = m_day->currentIndex() + 1;
 			item->upload_limit = m_upload_limit->value();
 			item->download_limit = m_download_limit->value();
@@ -110,6 +108,7 @@ namespace kt
 			item->screensaver_limits = m_screensaver_limits->isChecked();
 			item->ss_download_limit = m_ss_download_limit->value();
 			item->ss_upload_limit = m_ss_upload_limit->value();
+			item->checkTimes();
 			return true;
 		}
 		return false;
