@@ -4,6 +4,7 @@ Changes in 3.3:
 - Make TreeFilterModel use case insensitive filtering (203886)
 - Draw progressbar in percentage column of view (190875)
 - Unset Qt message handler when Log is destroyed (197944)
+- Fix bug causing scheduler to not restart the schedule timer
 
 Changes in 3.3beta1:
 - Cleanup plugin list (180402)
